Archive2/f0/41ded29dcf29a1/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:8:24: error: redefinition of 'int x'
   Bar bar(int(x), int(x), int{x});
                        ^
main.cpp:8:16: note: 'int x' previously declared here
   Bar bar(int(x), int(x), int{x});
                ^
+ clang++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
/tmp/main-9eea9e.o: In function `main':
main.cpp:(.text+0x15): undefined reference to `Bar::Bar(int, int, int)'
clang: error: linker command failed with exit code 1 (use -v to see invocation)
